--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,8 @@ verify_ssl = true
 
 [packages]
 django = "*"
+djangorestframework = "*"
+django-rest-auth = "*"
 
 [requires]
 python_version = "3.6"
